UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSProduct__c/FTRWSProduct__c.object-meta.xml
<CustomObject>
    <label>FTRWSProduct</label>
    <nameField>
        <label>FTRWSProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FTRWSProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>