UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSProduct__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>TextArea</type>
</CustomField>