UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSProduct__c/fields/PNUM__c.field-meta.xml
<CustomField>
    <fullName>PNUM__c</fullName>
    <label>PNUM</label>
    <type>TextArea</type>
</CustomField>