UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>TextArea</type>
</CustomField>