UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSProduct__c/fields/Term_Aggrement__c.field-meta.xml
<CustomField>
    <fullName>Term_Aggrement__c</fullName>
    <label>Term Aggrement</label>
    <type>TextArea</type>
</CustomField>